--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
-Welcome to our forums! Path is: {{ path }}.
+Welcome to our forums! forumurl is: {{ forumrul }}, rest is: {{ rest }},
+forumcount is: {{ forumcount }}
 </body>
 </html>
