--- a/cant_create_forum.html
+++ b/cant_create_forum.html
@@ -1,15 +1,13 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>Not logged in.</title>
+    <title>Not authorized to create forum</title>
     <link href="fofou.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 <p>Welcome to <b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>!</p>
-<p>There are no forums created yet.</p>
-<p>You're not logged in. To create a new forum <a href="{{ loginurl }}">log in</a> as admin.</p>
-
+<p>Only an admin can create a forum.</p>
 <hr>
 <center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> (<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>)</center>
 </body>
