--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>{{ title }}</title>
     <link href="fofou.css" rel="stylesheet" type="text/css">
-    <link type="application/rss+xml" rel="alternate" title="Discussion Group" href="/rss">
+    <link type="application/rss+xml" rel="alternate" title="Discussion Group" href="{{ rssurl }}">
 </head>
 
 <body>
-Welcome to our forums! forumurl is: {{ forumrul }}, rest is: {{ rest }},
-forumcount is: {{ forumcount }}
+Welcome to <b>{{ title }}</b>.
 </body>
 </html>
