--- a/no_forums_not_admin.html
+++ b/no_forums_not_admin.html
@@ -1,9 +1,8 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>{{ title }}</title>
+    <title>No forums</title>
     <link href="fofou.css" rel="stylesheet" type="text/css">
-    <link type="application/rss+xml" rel="alternate" title="Discussion Group" href="/rss">
 </head>
 
 <body>
