--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>{{ title }}</title>
-    <link href="fofou.css" rel="stylesheet" type="text/css">
+    <link href="/fofou.css" rel="stylesheet" type="text/css">
     <link type="application/rss+xml" rel="alternate" title="Discussion Group" href="{{ rssurl }}">
 </head>
 
 <body>
+
 Welcome to <b>{{ title }}</b>.
 </body>
 </html>
