--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <td class="sidebar">{{ sidebar}}
     </td>
     <td class="contents">
+
+    <div class="buttons">
+	<a accesskey="n" href="post.php"><img src="graphics/new.gif" alt="New topic" border="0" height="14" width="13"> <u>N</u>ew topic</a>
+	<a accesskey="t" href="archive.php"><img src="graphics/archive.gif" alt="Older topics" border="0" height="14" width="13"> Older <u>t</u>opics</a>
+	</div>
+
     </td>
 </tr>
 </tbody>
