shorten the code by using template_out(); started on saving posts and showing a list of posts; use redirect

--- a/404.html
+++ b/404.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-	<title>Not authorized to create forum</title>
+	<title>404 - not found</title>
 	<link href="fofou.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 <p>Welcome to <b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>!</p>
-<p>Only an admin can create a forum.</p>
+<p>The page you're looking for cannot be found. Go <a href="/">to index.</a></p>
 <hr>
 <center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> (<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>)</center>
 </body>
