--- a/no_forums_admin.html
+++ b/no_forums_admin.html
@@ -21,7 +21,7 @@
 	{% endif %}
 </p>
 	<center>
-		<form action="/createforum" method="post">
+		<form action="/forumsmanage" method="post">
 			<table>
 				<tr>
 					<td align="center" colspan="2">Create a new forum:</td>
