--- a/post.html
+++ b/post.html
@@ -25,7 +25,7 @@
 		<input name="CaptchaResponse" value="{{ num3 }}" type="hidden">
 
 		{% if topic_id %} 
-			<input name="TopicId" value="{{ topic_id }}" type="hidden">
+			<input name="Topic" value="{{ topic_val }}" type="hidden">
 			<h2>Reply to "{{ topic_subject }}"</h2>
 		{% else %}
 			<h2>New topic</h2>
@@ -66,6 +66,7 @@
 					<input class="Name" size="60" maxlength="32" name="Name" id="Name" style="width: 29em;" value="{{ name_val }}" type="edit">
 				</td>
 			</tr>
+<!--
 			<tr>
 				<th>
 					<label for="Email">Email:</label>
@@ -76,6 +77,7 @@
 					&nbsp;
 				</td>
 			</tr>
+-->
 			<tr>
 				<th>
 					<label for="Url">Home Page:</label>
