--- a/no_forums_admin.html
+++ b/no_forums_admin.html
@@ -8,14 +8,14 @@
 <body>
 <p>Welcome to <b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>!</p>
 
-<p>Hello <b>{{ nickname }}</b>.
+<p>Hello <b>{{ user.nickname }}</b>.
 	{% if not forums %}
 	You haven't created any forums yet.
 	{% else %}
 	Existing forums:
 	<ul>
 		{% for f in forums %}
-		<li> {{ f.title }} <a href="{{ f.url }}">edit</a>&nbsp;&nbsp; <a href="{{ f.url }}">delete</a></li>
+		<li> <a href="{{ f.url }}">{{ f.title }}</a> <a href="{{ f.edit_url }}">edit</a>&nbsp;&nbsp; <a href="{{ f.url }}">disable</a></li>
 		{% endfor %}
 	</ul>
 	{% endif %}
