managing forums more or less works

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 
 <body>
 <p>Welcome to <b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>!</p>
-<p>The page you're looking for cannot be found. Go <a href="/">to index.</a></p>
+<p>The page {{ url }} cannot be found. Go <a href="/">to index.</a></p>
 <hr>
 <center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> (<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>)</center>
 </body>
