--- a/forum_list.html
+++ b/forum_list.html
@@ -6,18 +6,29 @@
 </head>
 
 <body>
-		<p>Welcome to <b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>!</p>
+	<p>Welcome to <b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>!</p>
+
+	{% if forums %}
 		<p>Available forums:
-		<ul>
-		{% for f in forums %}
-		<li> <a href="/{{ f.url }}"> {{ f.title }}</a></li>
-		{% endfor %}
-		</ul>
+			<ul>
+				{% for f in forums %}
+				<li> <a href="/{{ f.url }}"> {{ f.title_or_url }}</a></li>
+				{% endfor %}
+			</ul>
 		</p>
 		{% if isadmin %}
-		<p>Since you're an admin, you can <a href="/forumsmanage">manage forums</a>.</p>
+		<p>Since you're an admin, you can <a href="/manageforums">manage forums</a>.</p>
 		{% endif %}
 		</p>
+	{% else %}
+		<p>There are no forums created yet.</p>
+		{% if loginurl %}
+		<p>You're not logged in. To create a new forum <a href="{{ loginurl }}">log in</a> as admin.</p>
+		{% else %}
+		<p>You're not logged in as admin, so you can't create new forums. To create new forums,
+			<a href="{{ logouturl }}">log out</a> and log in as admin.</p>
+		{% endif %}
+	{% endif %}
 	<hr>
 	<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> (<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>)</center>
 </body>
