--- a/manage_forums.html
+++ b/manage_forums.html
@@ -64,7 +64,7 @@
 			</table>
 	</center>
 </p>
-<p><b>Url</b> is part of the forum url. Should be short and only consist of lower-case letters.</p>
+<p><b>Url</b> is part of the forum url. Should be short and a valid url.</p>
 <p><b>Title</b> is what we show at the top of the forum.</p>
 <p><b>Tagline</b> is shown in smaller font, under title.</p>
 <p><b>Sidebar</b> is displayed in the left column.</p>
