when editing a forum, show value of sidebar; send forum.sidebar to topic list page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	</td>
 </tr>
 <tr>
-	<td class="sidebar">{{ sidebar}}
+	<td class="sidebar">
+		{{ sidebar }}
 	</td>
 	<td class="contents">
 		{% if not topics %}
