--- a/manage_forums.html
+++ b/manage_forums.html
@@ -49,7 +49,7 @@
 					</tr>
 					<tr>
 						<td valign="top">Sidebar</td>
-						<td><textarea name="sidebar" rows="4" cols="45" value="{{ prevsidebar }}"></textarea></td>
+						<td><textarea name="sidebar" rows="4" cols="45">{{ prevsidebar }}</textarea></td>
 					</tr>
 					<tr>
 						<td></td>
