--- a/manage_forums.html
+++ b/manage_forums.html
@@ -67,7 +67,7 @@
 <p><b>Url</b> is part of the forum url. Should be short and a valid url.</p>
 <p><b>Title</b> is what we show at the top of the forum.</p>
 <p><b>Tagline</b> is shown in smaller font, under title.</p>
-<p><b>Sidebar</b> is displayed in the left column.</p>
+<p><b>Sidebar</b> is displayed in the left column. HTML allowed (e.g. for links).</p>
 <p>
 Don't stress about choosing the right values - you can change them later.
 </p>
