--- a/topic_list.html
+++ b/topic_list.html
@@ -12,7 +12,7 @@
 <tr>
 	<td colspan="2" class="header">
 		<div>
-			<h1><a href="{{ siteroot }}" class="green">{{ title }}</a><h1>
+			<h1><a href="{{ siteroot }}" class="green">{{ title }}</a></h1>
 			<p>{{ tagline }}</p>
 		</div>
 	</td>
