add link to rss feed

--- a/topic_list.html
+++ b/topic_list.html
@@ -14,6 +14,7 @@
 		<div>
 			<h1><a href="{{ siteroot }}" class="green">{{ title }}</a></h1>
 			<p>{{ tagline }}</p>
+			<a href="{{ rsslink }}" title="RSS feed"><img src="/graphics/rss.gif" alt="RSS feed" align="right" valign="middle" border="0" height="14" width="36"></a><br />
 		</div>
 	</td>
 </tr>
