--- a/forum_list.html
+++ b/forum_list.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+  <div id="tbTop"> {{ log_in_out }} </div>
 	<p>Welcome to <b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>!</p>
 
 	{% if forums %}
