--- a/post.html
+++ b/post.html
@@ -26,10 +26,9 @@
 		<form action="post" method="post">
 		<input name="num1" value="{{ num1 }}" type="hidden">
 		<input name="num2" value="{{ num2 }}" type="hidden">
-		<input name="num3" value="{{ num3 }}" type="hidden">
 
 		{% if topic_key %} 
-			<input name="TopicKey" value="{{ topic_key }}" type="hidden">
+			<input name="TopicKey" value="{{ prevTopicKey }}" type="hidden">
 			<h2>Reply to "{{ topic_subject }}"</h2>
 		{% else %}
 			<h2>New topic</h2>
@@ -50,7 +49,7 @@
 			<tr>
 				<th><label for="Subject">Subject:</label></th>
 				<td colspan="2">
-					<input class="Subject" size="60" maxlength="64" name="Subject" id="Subject" style="width: 39em;" value="{{ prevSubject }}" type="edit">
+					<input class="{{ subject_class }}" size="60" maxlength="64" name="Subject" id="Subject" style="width: 39em;" value="{{ prevSubject }}" type="edit">
 					&nbsp;
 				</td>
 			</tr>
@@ -59,7 +58,7 @@
 			<tr>
 				<th><label for="Message">Message:</label></th>
 				<td colspan="2">
-					<textarea class="Message" name="Message" id="Message" style="width: 39em;" rows="16" cols="60" wrap="virtual">{{ prevMessage }}</textarea>
+					<textarea class="{{ message_class }}" name="Message" id="Message" style="width: 39em;" rows="16" cols="60" wrap="virtual">{{ prevMessage }}</textarea>
 					<div style="width: 300px;">Don't use HTML. Surround URLs with spaces.</div>
 					&nbsp;
 				</td>
@@ -67,7 +66,7 @@
 			<tr>
 				<th><label for="Name">Full name:</label></th>
 				<td style="width: 29em;">
-					<input class="Name" size="60" maxlength="32" name="Name" id="Name" style="width: 29em;" value="{{ prevName }}" type="edit">
+					<input class="{{ name_class }}" size="60" maxlength="32" name="Name" id="Name" style="width: 29em;" value="{{ prevName }}" type="edit">
 				</td>
 				<td style="width: 10em;">
 					<span class="formCheckBoxPair"><input name="Remember" id="Remember" value="{{ prevRemember }}"  checked type="checkbox"> <label for="Remember">Remember me</label></span>
@@ -78,7 +77,7 @@
 					<label for="Email">Email:</label>
 				</th>
 				<td colspan="2">
-					<input class="Email" size="60" maxlength="64" name="Email" id="Email" style="width: 29em;" value="{{ email_val }}" type="edit">
+					<input class="{{ email_class }}" size="60" maxlength="64" name="Email" id="Email" style="width: 29em;" value="{{ prevEmail }}" type="edit">
 					<div style="width: 300px;">Allows other people to email you through our web site. Your address is never revealed.</div>
 					&nbsp;
 				</td>
@@ -88,7 +87,7 @@
 					<label for="Url">Home Page:</label>
 				</th>
 				<td colspan="2">
-					<input class="Url" size="60" maxlength="128" name="Url" id="Url" style="width: 29em;" value="{{ url_val }}" type="edit">
+					<input class="Url" size="60" maxlength="128" name="Url" id="Url" style="width: 29em;" value="{{ prevUrl }}" type="edit">
 					&nbsp;
 				</td>
 			</tr>
