--- a/topic.html
+++ b/topic.html
@@ -12,7 +12,7 @@
 <tr>
 	<td colspan="2" class="header">
 		<div>
-			<h1><a href="{{ siteroot }}" class="green">{{ title }}</a><h1>
+			<h1><a href="{{ siteroot }}" class="green">{{ title }}</a></h1>
 			<p>{{ tagline }}</p>
 		</div>
 	</td>
@@ -21,6 +21,9 @@
 	<td class="sidebar">{{ sidebar}}
 	</td>
 	<td class="contents">
+		<div class="posts">
+			<h3>{{ subject }}</h3>
+		</div>
 	</td>
 </tr>
 </tbody>
