--- a/forum_list.html
+++ b/forum_list.html
@@ -22,7 +22,7 @@
 	{% endif %}
 
 	{% if not isadmin %}
-		<p>Log in as admin to create or manage forums.</p>
+		<p>Log in as admin to create new forums or manage existing forums.</p>
 	{% endif %}
 	<hr>
 	<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> (<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>)</center>
