--- a/forum_list.html
+++ b/forum_list.html
@@ -3,6 +3,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>List of forums</title>
 	<link href="/fofou.css" rel="stylesheet" type="text/css">
+	<script language="javascript" src="/fofou.js" type="text/javascript"></script>
 </head>
 
 <body>
