--- a/topic.html
+++ b/topic.html
@@ -3,6 +3,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>{{ title }}</title>
 	<link href="/fofou.css" rel="stylesheet" type="text/css">
+	<script language="javascript" src="/fofou.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -22,18 +23,38 @@
 	</td>
 	<td class="contents">
 		<div class="posts">
+
+		<script language="javascript" type="text/javascript">
+		<!--
+		rolloverInit('link', '/graphics/link_over.jpg');
+		rolloverInit('email', '/graphics/email_over.jpg');
+		rolloverInit('web', '/graphics/web_over.jpg');
+		rolloverInit('delete', '/graphics/delete_over.jpg');
+		rolloverInit('undo', '/graphics/undo_over.jpg');
+		// -->
+		</script>
+
 			<h3>{{ subject|escape }}</h3>
 			{% for post in posts %}
 				<div>
 					<div class="">{{ post.message|escape }}</div>
 					<div class="signature">
 
-						<a href="{{ permalink }}" title="Permalink" onmouseover="rolloverOn('link', '{{ permalink }}');" onmouseout="rolloverOff();"><img align="right" id="link{{ Fixme }}" src="/graphics/link.jpg" alt="Permalink" border="0" height="16" width="16"></a>
+						<a href="{{ permalink }}" title="Permalink" onmouseover="rolloverOn('link', {{ post.key.id }});" onmouseout="rolloverOff();"><img align="right" id="link{{ post.key.id }}" src="/graphics/link.jpg" alt="Permalink" border="0" height="16" width="16"></a>
 
 						{% if post.user_email %}
-							<a href="{{ post.user_emailurl }}" title="Send private email" onmouseover="rolloverOn('email', '{{ Fixme }}');" onmouseout="rolloverOff();"><img align="right" id="email{{ Fixme }}" src="/graphics/email.jpg" alt="Send private email" border="0" height="16" width="16"></a>
+							<a href="{{ Fixme }}" title="Send private email" onmouseover="rolloverOn('email', '{{ post.key.id }}');" onmouseout="rolloverOff();"><img align="right" id="email{{ post.key.id }}" src="/graphics/email.jpg" alt="Send private email" border="0" height="16" width="16"></a>
+						{% endif %}
+						{% if is_admin %}
+							{% if post.is_deleted %}
+								<a href="{{ siteroot }}moderate?undel={{ post.key.id }}&ret={{ Fixme }}" title="Undelete Post" onmouseover="rolloverOn('undo', {{ post.key.id }});" onmouseout="rolloverOff();"><img align="right" id="undo{{ post.key.id }}" src="/graphics/undo.jpg" width="16" height="16" border="0" /></a>
+							{% else %}
+								<a href="{{ siteroot }}moderate?del={{ post.key.id }}&ret={{ Fixme }}" title="Delete Post" onmouseover="rolloverOn('delete', {{ post.key.id }});" onmouseout="rolloverOff();"><img align="right" id="delete{{ post.key.id }}" src="/graphics/delete.jpg" width="16" height="16" border="0" /></a>
+							{% endif %}
 						{% endif %}
 						{{ post.user_name|escape }}
+						<span class="noIE">&nbsp;</span><br />
+						{{ post.posted_on_str }}
 					</div>
 				</div>
 			{% endfor %}
