--- a/post.html
+++ b/post.html
@@ -15,7 +15,7 @@
 		<div>
 			<h1><a href="{{ siteroot }}" class="green">{{ title }}</a></h1>
 			<p>{{ tagline }}</p>
-			<a href="{{ rssurl }}" title="RSS feed"><img src="/graphics/rss.gif" alt="RSS feed" align="right" valign="middle" border="0" height="14" width="36"></a><br />
+			<a href="{{ siteroot }}rss" title="RSS feed"><img src="/graphics/rss.gif" alt="RSS feed" align="right" valign="middle" border="0" height="14" width="36"></a><br />
 		</div>
 	</td>
 </tr>
