send less stuff

--- a/manage_forums.html
+++ b/manage_forums.html
@@ -14,12 +14,12 @@
 	<td colspan="2" class="header">
 		<div>
 			<h1><a href="{{ siteroot }}" class="green">{{ title }}</a></h1>
-			<p>{{ tagline }}</p>
+			<p>{{ forum.tagline }}</p>
 		</div>
 	</td>
 </tr>
 <tr>
-	<td class="sidebar">{{ sidebar}}
+	<td class="sidebar">{{ forum.sidebar}}
 	</td>
 	<td class="contents">
 
