--- a/post.html
+++ b/post.html
@@ -14,13 +14,13 @@
 	<td colspan="2" class="header">
 		<div>
 			<h1><a href="{{ siteroot }}" class="green">{{ title }}</a></h1>
-			<p>{{ tagline }}</p>
+			<p>{{ forum.tagline }}</p>
 			<a href="{{ siteroot }}rss" title="RSS feed"><img src="/graphics/rss.gif" alt="RSS feed" align="right" valign="middle" border="0" height="14" width="36"></a><br />
 		</div>
 	</td>
 </tr>
 <tr>
-	<td class="sidebar">{{ sidebar}}
+	<td class="sidebar">{{ forum.sidebar}}
 	</td>
 	<td class="contents">
 	<div class="form">
