--- a/topic.html
+++ b/topic.html
@@ -44,7 +44,7 @@
 						<a href="{{ siteroot }}topic?id={{ topic.key.id }}#{{ post.key.id }}" title="Permalink" onmouseover="rolloverOn('link', {{ post.key.id }});" onmouseout="rolloverOff();"><img align="right" id="link{{ post.key.id }}" src="/graphics/link.jpg" alt="Permalink" border="0" height="16" width="16"></a>
 
 						{% if post.user_email %}
-							<a href="{{ Fixme }}" title="Send private email" onmouseover="rolloverOn('email', '{{ post.key.id }}');" onmouseout="rolloverOff();"><img align="right" id="email{{ post.key.id }}" src="/graphics/email.jpg" alt="Send private email" border="0" height="16" width="16"></a>
+							<a href="{{ siteroot }}email?postId={{ post.key.id }}" title="Send private email" onmouseover="rolloverOn('email', {{ post.key.id }});" onmouseout="rolloverOff();"><img align="right" id="email{{ post.key.id }}" src="/graphics/email.jpg" alt="Send private email" border="0" height="16" width="16"></a>
 						{% endif %}
 						{% if is_admin %}
 							{% if post.is_deleted %}
