--- a/post.html
+++ b/post.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-	<title>{{ title }}</title>
+	<title>{% firstof forum.title forum.url %}</title>
 	<link href="/fofou.css" rel="stylesheet" type="text/css">
 	<script language="javascript" src="/fofou.js" type="text/javascript"></script>
 </head>
@@ -13,7 +13,7 @@
 <tr>
 	<td colspan="2" class="header">
 		<div>
-			<h1><a href="{{ siteroot }}" class="green">{{ title }}</a></h1>
+			<h1><a href="{{ siteroot }}" class="green">{% firstof forum.title forum.url %}</a></h1>
 			<p>{{ forum.tagline }}</p>
 			<a href="{{ siteroot }}rss" title="RSS feed"><img src="/graphics/rss.gif" alt="RSS feed" align="right" valign="middle" border="0" height="14" width="36"></a><br />
 		</div>
