handle cookies properly and honor 'remember me' checkbox in the post form

--- a/post.html
+++ b/post.html
@@ -70,7 +70,7 @@
 					<input class="{{ name_class }}" size="60" maxlength="32" name="Name" id="Name" style="width: 29em;" value="{{ prevName|escape }}" type="edit">
 				</td>
 				<td style="width: 10em;">
-					<span class="formCheckBoxPair"><input name="Remember" id="Remember" value="{{ prevRemember }}"  checked type="checkbox"> <label for="Remember">Remember me</label></span>
+					<span class="formCheckBoxPair"><input name="Remember" id="Remember" value="Remeber" {{ rememberChecked }} type="checkbox"> <label for="Remember">Remember me</label></span>
 				</td>
 			</tr>
 			<tr>
