--- a/topic_list.html
+++ b/topic_list.html
@@ -25,10 +25,29 @@
 		{{ forum.sidebar }}
 	</td>
 	<td class="contents">
+		<form method="get" id="searchForm" action="http://google.com/search">
+			<div class="searchBox">
+				<table border="0" cellpadding="0" cellspacing="0">
+				<tbody>
+					<tr>
+						<td><label for="query">Search</label><br> </td>
+					</tr>
+					<tr>
+						<td>
+								<input type="hidden" name="IncludeBlogs" value="1" />
+								<input type="hidden" name="as_sitesearch" value="{{ siteurl }}" />
+						</td>
+						<td><input id="search" name="q" class="txt" type="text"></td>
+						<td><input class="button" value="Go" type="submit">&nbsp;</td>
+					</tr>
+				</tbody>
+				</table>
+			</div>
+		</form>
+		<div class="topics">
 		{% if not topics %}
 			There are no topics. You better create one.
 		{% else %}
-		<div class="topics">
 		{% for topic in topics %}
 			<a href="{{ siteroot }}topic?id={{ topic.key.id }}{% if topic.ncomments %}&comments={{ topic.ncomments }}{% endif %}" title="{{ topic.msg_short }}">{{ topic.subject }}</a>
 			<em>{{ topic.user_name }}</em><span>{{ topic.posts }}</span>
