add Topic.created_by to cache name of person who created the topic (by posting first post); show the name and number of comments in topic_list.html; format date of post in template and make it the same as in fruitshow

--- a/topic.html
+++ b/topic.html
@@ -59,7 +59,7 @@
 							{{ post.user_name|escape }}
 						{% endif %}
 						<span class="noIE">&nbsp;</span><br />
-						{{ post.posted_on_str }}
+						{{ post.created_on|date:"F jS, Y g:ia" }}
 					</div>
 				</div>
 			{% endfor %}
